Checkbox conditionally disabled if anonymous user
Only logged in users can set reviewed state

Bug: 1473135
Change-Id: I391275142c4b55e4b4324716e7d17d971c49e8d9

--- a/Server/assets/jst/job-recipe.html
+++ b/Server/assets/jst/job-recipe.html
@@ -1,5 +1,5 @@
 <td>
-  <input type="checkbox" class="recipe-reviewed" title="Reviewed?" <% if (reviewed) { %>checked="checked"<% } %> />
+  <input type="checkbox" class="recipe-reviewed" title="Reviewed?" <%if (reviewed) { %>checked="checked"<% }; if (!can_set_reviewed_state) { %>disabled="disabled"<% } %> />
 </td>
 <td>
   <a class="recipe-id" href="<%- beaker_url_prefix %>recipes/<%- id %>"><abbr title="<% if (guest) { %>Guest <% } %>Recipe">R</abbr>:<%- id %></a>
