transfer pool ownership when removing a user
Similar to how we transfer system ownership.

Bug: 1498374
Change-Id: I2803163812ddf1772af4deecb5ff1ec948103e24

--- a/Server/assets/jst/user.html
+++ b/Server/assets/jst/user.html
@@ -92,7 +92,7 @@
       <p>The user’s running jobs will be cancelled and their outstanding 
       system reservations and loans will be returned. They will be removed 
       from all groups and system access policies. Ownership of the user’s 
-      systems will be transferred to you.</p>
+      systems and system pools will be transferred to you.</p>
       <p><strong class="text-error">This operation is destructive and cannot be undone.</strong></p>
       <p>
         <button class="btn btn-danger delete" data-loading-text="<i class='fa fa-trash-o fa-spin'></i> Deleting&hellip;"><i class="fa fa-trash-o"></i> Delete</button>
